[package]
authors = ["Navid <yaa110@gmail.com>"]
categories = ["api-bindings", "external-ffi-bindings"]
description = "Rust bindings for libinjection"
documentation = "https://docs.rs/libinjection"
edition = "2024"
homepage = "https://github.com/yaa110/libinjection-rs"
keywords = ["sqli", "xss", "injection"]
license = "MIT/Apache-2.0"
name = "libinjection"
readme = "README.md"
repository = "https://github.com/yaa110/libinjection-rs"
version = "0.3.7"

[build-dependencies]
bindgen = "0.71"
